--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <header>
       <div class="inner">
-        <h1>RedisClient</h1>
+        <h1>vtortola.RedisClient</h1>
         <h2>Another .NET Redis client, for the craic</h2>
         <a href="https://github.com/vtortola/RedisClient" class="button"><small>View project on</small> GitHub</a>
       </div>
