Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <header>
       <div class="inner">
-        <h1>vtortola.RedisClient</h1>
+        <h1>RedisClient</h1>
         <h2>Another .NET Redis client, for the craic</h2>
         <a href="https://github.com/vtortola/RedisClient" class="button"><small>View project on</small> GitHub</a>
       </div>
@@ -31,13 +31,7 @@
           <h1>
 <a id="redisclient" class="anchor" href="#redisclient" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>RedisClient</h1>
 
-<h4>
-<a id="another-net-redis-client-for-the-craic" class="anchor" href="#another-net-redis-client-for-the-craic" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Another .NET Redis client, for the craic.</h4>
-
-<h5>
-<a id="status-alpha" class="anchor" href="#status-alpha" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Status: ALPHA</h5>
-
-<p>A .NET Redis client based on templated strings that uses a special syntax for easing LUA script invocation named <a href="//github.com/vtortola/RedisClient/wiki/Procedures">"procedures"</a>. The API exposes virtual connections named "channels" that provide seamless access to Redis through three different connection pools.</p>
+<p>An experimental .NET Redis client based on templated strings that uses a special syntax for easing LUA script invocation named <a href="//github.com/vtortola/RedisClient/wiki/Procedures">"procedures"</a>. The API exposes virtual connections named "channels" that provide seamless access to Redis through three different connection pools.</p>
 
 <ul>
 <li>Templated strings interface <a href="//github.com/vtortola/RedisClient/wiki/Parameter-binding">(more about parameter binding)</a>.</li>
@@ -50,9 +44,10 @@
 <h4>
 <a id="performance" class="anchor" href="#performance" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Performance</h4>
 
-<p>A very rough, maybe flawed, <a href="//github.com/vtortola/RedisClient/wiki/Performance">performance comparison</a> shows the that the performance is close to other well known clients.</p>
+<p>A <a href="//github.com/vtortola/RedisClient/wiki/Performance">performance comparison</a> shows the that the performance is close to other well known clients.</p>
 
-<p><a href="//github.com/vtortola/RedisClient/wiki/Performance"><img src="http://vtortola.github.io/redisclientperf.png?what" height="300"></a></p>
+<p><a href="//github.com/vtortola/RedisClient/wiki/Performance"><img src="http://vtortola.github.io/rcclientperfTran.png" height="250"></a>
+<a href="//github.com/vtortola/RedisClient/wiki/Performance"><img src="http://vtortola.github.io/rcclientperfPipe.png" height="250"></a></p>
 
 <h4>
 <a id="use-in-a-web-application" class="anchor" href="#use-in-a-web-application" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Use in a web application</h4>
