--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
       <div class="inner">
         <h1>RedisClient</h1>
-        <h2>Another .NET Redis client, for the craic</h2>
+        <h2>.NET Redis client focused on LUA scripting</h2>
         <a href="https://github.com/vtortola/RedisClient" class="button"><small>View project on</small> GitHub</a>
       </div>
     </header>
