--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ endproc
 <h4>
 <a id="use-in-a-web-application" class="anchor" href="#use-in-a-web-application" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Use in a web application</h4>
 
-<p>Also in this repository you will find <a href="//github.com/vtortola/RedisClient/wiki/SimpleQA-:-A-proof-of-concept">SimpleQA</a>, a proof of concept of a <em>Q&amp;A</em> application using RedisClient.</p>
+<p>Also in this repository you will find <a href="//github.com/vtortola/RedisClient/wiki/SimpleQA-:-A-proof-of-concept">SimpleQA</a>, a proof of concept of a <i>StackOverflow-ish<i> <em>Q&amp;A</em> application using RedisClient.</p>
 
 <p><a href="//github.com/vtortola/RedisClient/wiki/SimpleQA-:-A-proof-of-concept"><img src="http://vtortola.github.io/SimpleQA/Mini.png?version=3"></a></p>
 
