--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@ endproc
 
 <p>A <a href="//github.com/vtortola/RedisClient/wiki/Performance">performance comparison</a> shows the that the performance is close to other well known clients.</p>
 
-<p><a href="//github.com/vtortola/RedisClient/wiki/Performance"><img src="http://vtortola.github.io/RCPerf/pipeline.png" height="300"></a>
-<a href="//github.com/vtortola/RedisClient/wiki/Performance"><img src="http://vtortola.github.io/RCPerf/transactions.png" height="300"></a></p>
+<p><a href="//github.com/vtortola/RedisClient/wiki/Performance"><img src="http://vtortola.github.io/RCPerf/pipeline.png"></a>
+<a href="//github.com/vtortola/RedisClient/wiki/Performance"><img src="http://vtortola.github.io/RCPerf/transactions.png"></a></p>
 
 <h4>
 <a id="use-in-a-web-application" class="anchor" href="#use-in-a-web-application" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Use in a web application</h4>
